k8s/application-server/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: nginx-ingress
  namespace: student-it190204
spec:
  rules:
    - host: student.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /it190204
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80

          - path: /it190204/franklyn/(.*)$
            pathType: Prefix
            backend:
              service:
                name: franklyn-application-server
                port:
                  number: 8080
